@@ -33,6 +33,7 @@ import org.apache.lucene.document.SortedNumericDocValuesField;
 import org.apache.lucene.document.SortedSetDocValuesField;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.index.ExitableDirectoryReader.ExitingReaderException;
+import org.apache.lucene.search.AcceptDocs;
 import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.PrefixQuery;
@@ -41,7 +42,10 @@ import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.analysis.MockAnalyzer;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.util.BytesRef;
+import org.apache.lucene.util.IOFunction;
+import org.apache.lucene.util.SuppressForbidden;
 import org.apache.lucene.util.TestVectorUtil;
+import org.hamcrest.Matchers;
 
 /**
  * Test that uses a default/lucene Implementation of {@link QueryTimeout} to exit out long running
@@ -67,14 +71,13 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
       }
 
       /** Sleep between iterations to timeout things. */
+      @SuppressForbidden(reason = "Thread sleep")
       @Override
       public BytesRef next() throws IOException {
         try {
           // Sleep for 100ms before each .next() call.
           Thread.sleep(100);
-        } catch (
-            @SuppressWarnings("unused")
-            InterruptedException e) {
+        } catch (InterruptedException _) {
         }
         return in.next();
       }
@@ -172,8 +175,11 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
   /**
    * Tests time out check sampling of TermsEnum iterations
    *
+   * <p>TODO: incredibly slow
+   *
    * @throws Exception on error
    */
+  @Nightly
   public void testExitableTermsEnumSampleTimeoutCheck() throws Exception {
     try (Directory directory = newDirectory()) {
       try (IndexWriter writer =
@@ -332,77 +338,89 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
     return () -> true;
   }
 
-  @FunctionalInterface
-  interface DvFactory {
-    DocValuesIterator create(LeafReader leaf) throws IOException;
-  }
-
   public void testDocValues() throws IOException {
-    Directory directory = newDirectory();
-    IndexWriter writer =
-        new IndexWriter(directory, newIndexWriterConfig(new MockAnalyzer(random())));
+    try (Directory directory = newDirectory()) {
+      IndexWriter writer =
+          new IndexWriter(directory, newIndexWriterConfig(new MockAnalyzer(random())));
 
-    Document d1 = new Document();
-    addDVs(d1, 10);
-    writer.addDocument(d1);
+      Document d1 = new Document();
+      addDVs(d1, 10);
+      writer.addDocument(d1);
 
-    Document d2 = new Document();
-    addDVs(d2, 100);
-    writer.addDocument(d2);
+      Document d2 = new Document();
+      addDVs(d2, 100);
+      writer.addDocument(d2);
 
-    Document d3 = new Document();
-    addDVs(d3, 1000);
-    writer.addDocument(d3);
+      Document d3 = new Document();
+      addDVs(d3, 1000);
+      writer.addDocument(d3);
 
-    writer.forceMerge(1);
-    writer.commit();
-    writer.close();
+      writer.forceMerge(1);
+      writer.commit();
+      writer.close();
 
-    DirectoryReader directoryReader;
-    DirectoryReader exitableDirectoryReader;
+      DirectoryReader directoryReader;
+      DirectoryReader exitableDirectoryReader;
 
-    for (DvFactory dvFactory :
-        Arrays.<DvFactory>asList(
-            (r) -> r.getSortedDocValues("sorted"),
-            (r) -> r.getSortedSetDocValues("sortedset"),
-            (r) -> r.getSortedNumericDocValues("sortednumeric"),
-            (r) -> r.getNumericDocValues("numeric"),
-            (r) -> r.getBinaryDocValues("binary"))) {
-      directoryReader = DirectoryReader.open(directory);
-      exitableDirectoryReader =
-          new ExitableDirectoryReader(directoryReader, immediateQueryTimeout());
+      for (IOFunction<LeafReader, DocValuesIterator> dvFactory :
+          Arrays.<IOFunction<LeafReader, DocValuesIterator>>asList(
+              (r) -> r.getSortedDocValues("sorted"),
+              (r) -> r.getSortedSetDocValues("sortedset"),
+              (r) -> r.getSortedNumericDocValues("sortednumeric"),
+              (r) -> r.getNumericDocValues("numeric"),
+              (r) -> r.getBinaryDocValues("binary"))) {
+        directoryReader = DirectoryReader.open(directory);
+        exitableDirectoryReader =
+            new ExitableDirectoryReader(directoryReader, immediateQueryTimeout());
 
-      {
-        IndexReader reader = new TestReader(getOnlyLeafReader(exitableDirectoryReader));
+        try (IndexReader reader = new TestReader(getOnlyLeafReader(exitableDirectoryReader))) {
+          expectThrows(
+              ExitingReaderException.class,
+              () -> {
+                LeafReader leaf = reader.leaves().get(0).reader();
+                DocValuesIterator iter = dvFactory.apply(leaf);
+                scan(leaf, iter);
+              });
+        }
 
-        expectThrows(
-            ExitingReaderException.class,
-            () -> {
-              LeafReader leaf = reader.leaves().get(0).reader();
-              DocValuesIterator iter = dvFactory.create(leaf);
-              scan(leaf, iter);
-            });
-        reader.close();
+        directoryReader = DirectoryReader.open(directory);
+        exitableDirectoryReader =
+            new ExitableDirectoryReader(directoryReader, infiniteQueryTimeout());
+        try (IndexReader reader = new TestReader(getOnlyLeafReader(exitableDirectoryReader))) {
+          final LeafReader leaf = reader.leaves().get(0).reader();
+          scan(leaf, dvFactory.apply(leaf));
+          assertNull(leaf.getNumericDocValues("absent"));
+          assertNull(leaf.getBinaryDocValues("absent"));
+          assertNull(leaf.getSortedDocValues("absent"));
+          assertNull(leaf.getSortedNumericDocValues("absent"));
+          assertNull(leaf.getSortedSetDocValues("absent"));
+        }
       }
 
+      // Test that singleton docValues stay as singleton docValues after filtering
       directoryReader = DirectoryReader.open(directory);
+      try (IndexReader reader = new TestReader(getOnlyLeafReader(directoryReader))) {
+        LeafReader leafReader = reader.leaves().getFirst().reader();
+        assertThat(
+            leafReader.getSortedSetDocValues("sortedset"),
+            Matchers.instanceOf(SingletonSortedSetDocValues.class));
+        assertThat(
+            leafReader.getSortedNumericDocValues("sortednumeric"),
+            Matchers.instanceOf(SingletonSortedNumericDocValues.class));
+      }
       exitableDirectoryReader =
-          new ExitableDirectoryReader(directoryReader, infiniteQueryTimeout());
-      {
-        IndexReader reader = new TestReader(getOnlyLeafReader(exitableDirectoryReader));
-        final LeafReader leaf = reader.leaves().get(0).reader();
-        scan(leaf, dvFactory.create(leaf));
-        assertNull(leaf.getNumericDocValues("absent"));
-        assertNull(leaf.getBinaryDocValues("absent"));
-        assertNull(leaf.getSortedDocValues("absent"));
-        assertNull(leaf.getSortedNumericDocValues("absent"));
-        assertNull(leaf.getSortedSetDocValues("absent"));
-
-        reader.close();
+          new ExitableDirectoryReader(DirectoryReader.open(directory), infiniteQueryTimeout());
+      try (IndexReader extitableReader =
+          new TestReader(getOnlyLeafReader(exitableDirectoryReader))) {
+        LeafReader exitableLeafReader = extitableReader.leaves().getFirst().reader();
+        assertThat(
+            exitableLeafReader.getSortedSetDocValues("sortedset"),
+            Matchers.instanceOf(SingletonSortedSetDocValues.class));
+        assertThat(
+            exitableLeafReader.getSortedNumericDocValues("sortednumeric"),
+            Matchers.instanceOf(SingletonSortedNumericDocValues.class));
       }
     }
-
-    directory.close();
   }
 
   public void testFloatVectorValues() throws IOException {
@@ -457,8 +475,8 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
       expectThrows(
           ExitingReaderException.class,
           () -> {
-            DocIdSetIterator iter = leaf.getFloatVectorValues("vector");
-            scanAndRetrieve(leaf, iter);
+            KnnVectorValues values = leaf.getFloatVectorValues("vector");
+            scanAndRetrieve(leaf, values);
           });
 
       expectThrows(
@@ -468,17 +486,17 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
                   "vector",
                   TestVectorUtil.randomVector(dimension),
                   5,
-                  leaf.getLiveDocs(),
+                  AcceptDocs.fromLiveDocs(leaf.getLiveDocs(), leaf.maxDoc()),
                   Integer.MAX_VALUE));
     } else {
-      DocIdSetIterator iter = leaf.getFloatVectorValues("vector");
-      scanAndRetrieve(leaf, iter);
+      KnnVectorValues values = leaf.getFloatVectorValues("vector");
+      scanAndRetrieve(leaf, values);
 
       leaf.searchNearestVectors(
           "vector",
           TestVectorUtil.randomVector(dimension),
           5,
-          leaf.getLiveDocs(),
+          AcceptDocs.fromLiveDocs(leaf.getLiveDocs(), leaf.maxDoc()),
           Integer.MAX_VALUE);
     }
 
@@ -532,8 +550,8 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
       expectThrows(
           ExitingReaderException.class,
           () -> {
-            DocIdSetIterator iter = leaf.getByteVectorValues("vector");
-            scanAndRetrieve(leaf, iter);
+            KnnVectorValues values = leaf.getByteVectorValues("vector");
+            scanAndRetrieve(leaf, values);
           });
 
       expectThrows(
@@ -543,17 +561,18 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
                   "vector",
                   TestVectorUtil.randomVectorBytes(dimension),
                   5,
-                  leaf.getLiveDocs(),
+                  AcceptDocs.fromLiveDocs(leaf.getLiveDocs(), leaf.maxDoc()),
                   Integer.MAX_VALUE));
+
     } else {
-      DocIdSetIterator iter = leaf.getByteVectorValues("vector");
-      scanAndRetrieve(leaf, iter);
+      KnnVectorValues values = leaf.getByteVectorValues("vector");
+      scanAndRetrieve(leaf, values);
 
       leaf.searchNearestVectors(
           "vector",
           TestVectorUtil.randomVectorBytes(dimension),
           5,
-          leaf.getLiveDocs(),
+          AcceptDocs.fromLiveDocs(leaf.getLiveDocs(), leaf.maxDoc()),
           Integer.MAX_VALUE);
     }
 
@@ -561,20 +580,24 @@ public class TestExitableDirectoryReader extends LuceneTestCase {
     directory.close();
   }
 
-  private static void scanAndRetrieve(LeafReader leaf, DocIdSetIterator iter) throws IOException {
+  private static void scanAndRetrieve(LeafReader leaf, KnnVectorValues values) throws IOException {
+    KnnVectorValues.DocIndexIterator iter = values.iterator();
     for (iter.nextDoc();
         iter.docID() != DocIdSetIterator.NO_MORE_DOCS && iter.docID() < leaf.maxDoc(); ) {
-      final int nextDocId = iter.docID() + 1;
+      int docId = iter.docID();
+      if (docId >= leaf.maxDoc()) {
+        break;
+      }
+      final int nextDocId = docId + 1;
       if (random().nextBoolean() && nextDocId < leaf.maxDoc()) {
         iter.advance(nextDocId);
       } else {
         iter.nextDoc();
       }
-
       if (random().nextBoolean()
           && iter.docID() != DocIdSetIterator.NO_MORE_DOCS
-          && iter instanceof FloatVectorValues) {
-        ((FloatVectorValues) iter).vectorValue();
+          && values instanceof FloatVectorValues) {
+        ((FloatVectorValues) values).vectorValue(iter.index());
       }
     }
   }
